Add hover effect on days

--- a/style.css
+++ b/style.css
@@ -98,6 +98,14 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  transition: background-color 0.2s;
+}
+
+.days div:hover:not(.today) {
+  background-color: #262626;
+  border: 0.2rem solid #777;
+  cursor: pointer;
 }
 
 .prev-date,
